syntax="proto3";

package com.distkv.rpc.protobuf;

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname="StringProtocol";
option cc_generic_services = true;

message StrPutRequest {
    string value = 1;
};

message StrPutResponse {
};

message StrGetRequest {
}

message StrGetResponse {
    string value =1;
};
